--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ h1 {
   text-align: center;
   display: block;
   margin-bottom: 3rem;
+  outline: none;
 }
 
 .btn {
@@ -122,20 +123,21 @@ h1 {
   display: none;
 }
 
-.modal {
+.popup {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 50%;
+  width: 60%;
   background-color: white;
   padding: 6rem;
   border-radius: 5px;
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
   z-index: 10;
 }
-h1 {
-  font-size: 2.5rem;
+.result {
+  font-size: 1.5rem;
+  line-height: 30px;
   margin-bottom: 2rem;
   color: #222;
 }
@@ -151,7 +153,7 @@ h1 {
   z-index: 5;
 }
 
-.close-modal {
+.close-window {
   position: absolute;
   top: 1.2rem;
   right: 2rem;
