--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ h1 {
   border: none;
   background: none;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 768px) {
   .popup {
     width: 100%;
   }
