--- a/style.css
+++ b/style.css
@@ -163,7 +163,18 @@ h1 {
   border: none;
   background: none;
 }
+@media only screen and (max-width: 992px) {
+  .popup {
+    width: 100%;
+  }
+}
 @media only screen and (max-width: 600px) {
+  .popup {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 450px) {
   .popup {
     width: 100%;
   }
