--- a/style.css
+++ b/style.css
@@ -163,3 +163,52 @@ h1 {
   border: none;
   background: none;
 }
+
+@media only screen and (max-width: 1200px) {
+  .popup {
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .popup {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 450px) {
+  .popup {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .between {
+    font-size: 1rem;
+  }
+  h1 {
+    font-size: 2rem;
+  }
+  .btn {
+    padding: 1.5rem;
+    font-size: 1.5rem;
+  }
+
+  .number {
+    font-size: 4rem;
+    width: 12rem;
+    padding: 3rem;
+  }
+
+  .guess {
+    width: 15rem;
+  }
+  .message {
+    font-size: 1.4rem;
+    height: 1rem;
+  }
+
+  .label-score,
+  .label-highscore {
+    font-size: 1.4rem;
+  }
+}
